# MedICS_Extension_Base

./: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
docs/: ID_PROTECTION.md  MIGRATION_GUIDE.md
examples/: basic_widget_extension.py  demo_id_protection.py
medics_extension_sdk/: __init__.py  base_extension.py  cli.py  py.typed
medics_extension_sdk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_base_extension.py  test_id_readonly.py  test_id_readonly_simple.py
